src/objects/Office_Jurisdiction__c.object
<CustomObject>
    <fields>
        <fullName>Barangay__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Barangay</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference__c.Field__c</field>
                <operation>equals</operation>
                <value>Barangay</value>
            </filterItems>
            <filterItems>
                <field>Reference__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.City__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Office Jurisdictions (Barangay)</relationshipLabel>
        <relationshipName>Office_Jurisdictions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search City</inlineHelpText>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.Province__c</valueField>
            </filterItems>
            <filterItems>
                <field>Reference__c.Field__c</field>
                <operation>equals</operation>
                <value>City</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Office Jurisdictions (City)</relationshipLabel>
        <relationshipName>Office_Jurisdictions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Office Jurisdictions</relationshipLabel>
        <relationshipName>Office_Jurisdictions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search Province</inlineHelpText>
        <label>Province</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference__c.Field__c</field>
                <operation>equals</operation>
                <value>Province</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Office Jurisdictions</relationshipLabel>
        <relationshipName>Office_Jurisdictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_ID__c</fullName>
        <externalId>true</externalId>
        <label>Street ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Street Name</label>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Office Jurisdictions (Street Name)</relationshipLabel>
        <relationshipName>Office_Jurisdictions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subdivision</label>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Office Jurisdictions (Subdivision)</relationshipLabel>
        <relationshipName>Office_Jurisdictions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Office Jurisdiction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mike</fullName>
        <columns>NAME</columns>
        <columns>Office__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Barangay__c</columns>
        <columns>City__c</columns>
        <columns>Province__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Street_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Mike</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OJ-{0000000000}</displayFormat>
        <label>Office Jurisdiction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Office Jurisdictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>